# audio-samples

./: .gitignore  README.md  pyproject.toml
.specs/: STATE.md
.specs/features/audio_slicer/: context.md  spec.md  tasks.md  validation.md
.specs/features/wav2base64/: spec.md  validation.md
.specs/features/yaml_v2/: spec.md
docs/: first_spec.md
samples/: samples_agro1.yaml
samples/a_ia_ta_ai-1min/: config.yaml
samples/samples_agro1/: config.yaml
scripts/: wav2base64.py
src/audio_samples/: __init__.py  __main__.py  cli.py  default_rule.yaml  feasibility.py  layout_continuous.py  layout_random.py  loader.py  rules.py  writer.py
tests/: test_cli.py  test_feasibility.py  test_layout_continuous.py  test_layout_random.py  test_loader.py  test_rules.py  test_wav2base64.py  test_writer.py
