[project]
name = "audio-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio Moreira", email = "antonionmoreira@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "av>=18.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.scripts]
audio-slicer = "audio_samples.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audio_samples"]
