[project]
name = "audio-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio Moreira", email = "antonionmoreira@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "av>=18.0.0",
    "pydantic>=2.13.4",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
]

[project.scripts]
audio-slicer = "audio_samples.cli:app"
wav2base64 = "scripts.wav2base64:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.59",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audio_samples", "scripts"]

[tool.ruff]
# Set the maximum line length
line-length = 88

# Target Python version matching the environment
target-version = "py312"

[tool.ruff.lint]
# Enable standard, modern rulesets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common design flaws/bugs)
    "C4",   # flake8-comprehensions (better list/dict/set comprehensions)
    "N",    # pep8-naming (naming conventions)
    "UP",   # pyupgrade (upgrade syntax to modern standards)
    "RUF",  # Ruff-specific rules
]
ignore = []

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Configure formatter to match modern standards (like Black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

